# branut

./: CMakeLists.txt  LICENSE
include/: CMakeLists.txt
include/branut/: Term.hpp  Variable.hpp  Variable.inl
src/: CMakeLists.txt  Term.cpp  Variable.cpp
tests/: CMakeLists.txt  test_basic_term.cpp  test_basic_variable.cpp  test_define.hpp  test_term_equation.cpp
